--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#677F91"
-    tools:context="dashboard.DashboardFragment">
+    tools:context=".dashboard.DashboardFragment">
 
     <TextView
         android:id="@+id/text_home"
