--- a/app/src/main/res/layout/dashboard_main.xml
+++ b/app/src/main/res/layout/dashboard_main.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="@android:color/black"
-                android:backgroundTint="@color/colorAccent"
+                android:backgroundTint="@color/colorAccentTwo"
                 android:layout_marginHorizontal="20dp"
                 android:text="@string/add_club" />
         </LinearLayout>
