Added the inventory views.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccent">#CEBF8A</color>
     <color name="colorGrey">#C4C4C4</color>
     <color name="colorAccentTwo">#C68A8B</color>
+    <color name="colorDarkBlue">#40515C</color>
 </resources>
