--- a/app/src/main/res/layout/inventory_card_view.xml
+++ b/app/src/main/res/layout/inventory_card_view.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
     app:cardCornerRadius="10dp"
+    android:gravity="center_horizontal"
     android:layout_margin="10dp"
     android:orientation="vertical">
 
@@ -51,12 +52,11 @@
 
     <Button
         android:layout_marginTop="8dp"
-        android:padding="16dp"
+        android:paddingHorizontal="30dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:backgroundTint="@color/colorPrimary"
-        android:text="See More">
+        android:layout_height="45dp"
+        android:background="@drawable/round_button"
+        android:text="@string/see_more">
 
     </Button>
 
