--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="colorGrey">#C4C4C4</color>
     <color name="colorAccentTwo">#C68A8B</color>
     <color name="colorDarkBlue">#40515C</color>
+    <color name="colorRed">#CF6A6C</color>
+    <color name="colorGreen">#53B144</color>
 </resources>
