--- a/app/src/main/res/layout/gear_summary_popup.xml
+++ b/app/src/main/res/layout/gear_summary_popup.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#40515C"
-    android:backgroundTint="#40515C">
+    android:background="@color/colorDarkBlue"
+    android:backgroundTint="@color/colorDarkBlue">
 
     <TextView
         android:id="@+id/title_text_view"
@@ -24,8 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="4dp"
         android:layout_below="@id/title_text_view"
-        android:background="#809685"
-        android:backgroundTint="#809685" />
+        android:background="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorPrimaryDark" />
 
     <TextView
         android:id="@+id/description_text_view"
