--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#677F91">
+    android:background="@color/colorDarkBlue">
 
     <TextView
         android:id="@+id/title_text_view"
@@ -46,7 +46,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="30dp"
-        android:background="#CEBF8A"
+        android:background="@color/colorAccent"
         android:text="@string/login" />
 
     <TextView
