--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,15 +5,15 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_inventory"
             android:icon="@drawable/ic_gear"
             android:title="@string/gear_inventory" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_messages"
             android:icon="@drawable/ic_messages"
             android:title="@string/messages" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_management"
             android:icon="@drawable/ic_management"
             android:title="@string/gear_management" />
     </group>
