--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_inventory">
 
     <fragment
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_inventory"
         android:name="edu.rosehulman.gearlocker.dashboard.DashboardFragment"
         android:label="Dashboard" />
 
