--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,11 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_inventory">
+    app:startDestination="@+id/navigation_dashboard">
+
 
     <fragment
-        android:id="@+id/nav_inventory"
+        android:id="@+id/navigation_management"
         android:name="edu.rosehulman.gearlocker.dashboard.DashboardFragment"
-        android:label="Dashboard" />
+        android:label="Management"
+        tools:layout="@layout/fragment_management" />
+
+    <fragment
+        android:id="@+id/navigation_inventory"
+        android:name="edu.rosehulman.gearlocker.dashboard.DashboardFragment"
+        android:label="Inventory"
+        tools:layout="@layout/fragment_inventory" />
+
+    <fragment
+        android:id="@+id/navigation_messages"
+        android:name="edu.rosehulman.gearlocker.dashboard.DashboardFragment"
+        android:label="Messages"
+        tools:layout="@layout/fragment_messages" />
+
+    <fragment
+        android:id="@+id/navigation_dashboard"
+        android:name="edu.rosehulman.gearlocker.dashboard.DashboardFragment"
+        android:label="Dashboard"
+        tools:layout="@layout/fragment_dashboard" />
 
 </navigation>
