--- a/app/src/main/res/layout/dashboard_card_view.xml
+++ b/app/src/main/res/layout/dashboard_card_view.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@android:color/darker_gray"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/colorGrey"
-    app:cardCornerRadius="10dp"
-    android:layout_margin="4dp">
+    card_view:cardCornerRadius="10dp"
+    card_view:cardUseCompatPadding="true">
 
-    <TextView
-        android:padding="10dp"
-        android:textSize="18sp"
-        android:id="@+id/dashboard_title_item_text"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/item_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/dashboard_title_item_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/rental_text"
+            android:textSize="18sp" />
+
+        <ListView
+            android:id="@+id/item_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
