--- a/app/src/main/res/layout/dashboard_card_view.xml
+++ b/app/src/main/res/layout/dashboard_card_view.xml
@@ -25,6 +25,10 @@
         <ListView
             android:id="@+id/item_list"
             android:layout_width="match_parent"
+            android:divider="@android:color/transparent"
+            android:footerDividersEnabled="true"
+            android:headerDividersEnabled="true"
+            android:dividerHeight="15dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
