A few minor changes to the management sign in. Trying to figure out how to have more control over the app flow.

--- a/app/src/main/res/layout/gear_management_sign_in.xml
+++ b/app/src/main/res/layout/gear_management_sign_in.xml
@@ -42,6 +42,7 @@
         android:text="@string/manage_gear" />
 
     <TextView
+        android:id="@+id/return_to_dash_button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
