Added the checkout cardview, rental home fragment, and worked on the mobile navigation.

--- a/app/src/main/res/layout/fragment_rental_overview.xml
+++ b/app/src/main/res/layout/fragment_rental_overview.xml
@@ -3,4 +3,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlue"
+    android:id="@+id/rental_overview_layout"
     android:padding="25dp" />
