--- a/app/src/main/res/layout/rental_home_fragment.xml
+++ b/app/src/main/res/layout/rental_home_fragment.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rental_home_layout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBlue"
-    android:paddingTop="25dp">
+    android:background="@color/colorBlue">
 
     <Button
-        android:id="@+id/rentals_button"
+        android:id="@+id/overview_button"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_margin="5dp"
-        android:text="@string/rentals"
-        android:textSize="16sp"
         android:background="@drawable/round_button_grey"
+        android:text="@string/overview"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/checkin_button" />
 
     <Button
@@ -21,9 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_margin="5dp"
-        android:textSize="16sp"
-        android:text="@string/inventory"
         android:background="@drawable/round_button_grey"
+        android:text="@string/check_in"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/checkout_button" />
 
     <Button
@@ -31,24 +31,21 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_margin="5dp"
-        android:textSize="16sp"
-        android:text="@string/messages"
         android:background="@drawable/round_button_grey"
+        android:text="@string/check_out"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        app:layout_constraintTop_toBottomOf="@id/checkout_button"
-        android:id="@+id/return_to_dash_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/return_to_dashboard"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:onClick="onClick"
-        android:clickable="true"/>
+    <Button
+        android:id="@+id/forms_button"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/round_button_grey"
+        android:text="@string/forms"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/checkout_button" />
 
     <ImageView
         android:layout_marginTop="20dp"
@@ -58,6 +55,5 @@
         android:layout_alignParentBottom="true"
         android:src="@drawable/ic_mountains"
         android:layout_marginBottom="40dp"/>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
