Revert "Added the checkout cardview, rental home fragment, and worked on the mobile navigation."
This reverts commit 9296a112

--- a/app/src/main/res/layout/gear_management_home.xml
+++ b/app/src/main/res/layout/gear_management_home.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBlue"
+    android:paddingBottom="100dp"
     android:paddingTop="25dp">
 
     <Button
@@ -14,20 +15,20 @@
         android:text="@string/rentals"
         android:textSize="16sp"
         android:background="@drawable/round_button_grey"
-        app:layout_constraintBottom_toTopOf="@+id/checkin_button" />
+        app:layout_constraintBottom_toTopOf="@+id/inventory_button" />
 
     <Button
-        android:id="@+id/checkin_button"
+        android:id="@+id/inventory_button"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_margin="5dp"
         android:textSize="16sp"
         android:text="@string/inventory"
         android:background="@drawable/round_button_grey"
-        app:layout_constraintBottom_toTopOf="@id/checkout_button" />
+        app:layout_constraintBottom_toTopOf="@id/messages_button" />
 
     <Button
-        android:id="@+id/checkout_button"
+        android:id="@+id/messages_button"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_margin="5dp"
@@ -39,7 +40,7 @@
         />
 
     <TextView
-        app:layout_constraintTop_toBottomOf="@id/checkout_button"
+        app:layout_constraintTop_toBottomOf="@id/messages_button"
         android:id="@+id/return_to_dash_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -56,8 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:src="@drawable/ic_mountains"
-        android:layout_marginBottom="40dp"/>
+        android:src="@drawable/ic_mountains" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
