--- a/app/src/main/res/layout/check_in.xml
+++ b/app/src/main/res/layout/check_in.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerInParent="false"
+    android:id="@+id/rental_checkin_layout"
     android:background="@color/colorBlue">
 
     <androidx.cardview.widget.CardView
