--- a/app/src/main/res/layout/check_out_view.xml
+++ b/app/src/main/res/layout/check_out_view.xml
@@ -2,19 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rental_checkout_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBlue"
+
     android:padding="10dp">
 
     <Button
         android:id="@+id/check_out_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:clickable="false"
+        android:text="@string/rental_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <androidx.recyclerview.widget.RecyclerView
         app:layout_constraintTop_toBottomOf="@+id/check_out_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/check_out_title"
+        app:layout_constraintEnd_toEndOf="@id/check_out_title"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
