Made a few minor changes such as removing the bottom nav on the gear management sign in, changing the management bottom nav icons to clarify which part of the app users are on, and tweaking layouts.

--- a/app/src/main/res/menu/bottom_nav_management.xml
+++ b/app/src/main/res/menu/bottom_nav_management.xml
@@ -7,11 +7,11 @@
             android:title="@string/rentals" />
         <item
             android:id="@+id/navigation_management_inventory"
-            android:icon="@drawable/ic_gear"
+            android:icon="@drawable/ic_inventory_manage"
             android:title="@string/gear_inventory" />
         <item
             android:id="@+id/navigation_management_messages"
-            android:icon="@drawable/ic_messages"
+            android:icon="@drawable/ic_messages_manage"
             android:title="@string/messages" />
 
         <item
