--- a/app/src/main/res/layout/gear_management_sign_in.xml
+++ b/app/src/main/res/layout/gear_management_sign_in.xml
@@ -51,6 +51,7 @@
         android:layout_marginTop="10dp"/>
 
     <ImageView
+        android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/manage_gear_button"
