--- a/app/src/main/res/navigation/mobile_navigation_management.xml
+++ b/app/src/main/res/navigation/mobile_navigation_management.xml
@@ -9,7 +9,20 @@
         android:id="@+id/navigation_management_home"
         android:name="edu.rosehulman.gearlocker.managment.ManagementHomeFragment"
         android:label="Rentals"
-        tools:layout="@layout/fragment_management" />
+        tools:layout="@layout/fragment_management" >
+        <action
+            android:id="@+id/action_navigation_management_home_to_navigation_management_rentals"
+            app:destination="@id/navigation_management_rentals" />
+        <action
+            android:id="@+id/action_navigation_management_home_to_navigation_management_inventory"
+            app:destination="@id/navigation_management_inventory" />
+        <action
+            android:id="@+id/action_navigation_management_home_to_navigation_management_messages"
+            app:destination="@id/navigation_management_messages" />
+        <action
+            android:id="@+id/action_navigation_management_home_to_navigation_management_dashboard"
+            app:destination="@id/navigation_management_dashboard" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_management_rentals"
