--- a/app/src/main/res/layout/check_in.xml
+++ b/app/src/main/res/layout/check_in.xml
@@ -183,6 +183,7 @@
     </androidx.cardview.widget.CardView>
 
     <Button
+        android:id="@+id/cancel_check_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/check_in_rating"
@@ -196,6 +197,7 @@
         android:textAlignment="center" />
 
     <Button
+        android:id="@+id/complete_check_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/check_in_rating"
