Added Rosefire authentication with custom colors

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -49,4 +49,9 @@
         android:label="management_activity_main"
         tools:layout="@layout/management_activity_main" />
 
+    <activity
+        android:id="@+id/rosefireLoginActivity"
+        android:name="edu.rosehulman.rosefire.WebLoginActivity"
+        android:label="rosefire_login_activity"/>
+
 </navigation>
