--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,7 +24,7 @@
 
     <fragment
         android:id="@+id/navigation_messages"
-        android:name="edu.rosehulman.gearlocker.dashboard.DashboardFragment"
+        android:name="edu.rosehulman.gearlocker.messages.MessagesFragment"
         android:label="Messages"
         tools:layout="@layout/fragment_messages" />
 
